# robodog

./: README.md  ROS NOTES.txt  main.py  movement.py  trot.py  walking.py
.Dockerfile/: Dockerfile  devcontainer.json  dockerfile
devel/include/amcl/: AMCLConfig.h
devel/include/costmap_2d/: ObstaclePluginConfig.h  VoxelPluginConfig.h
devel/include/global_planner/: GlobalPlannerConfig.h
devel/lib/amcl/: amcl
devel/lib/base_local_planner/: point_grid
devel/lib/costmap_2d/: costmap_2d_cloud  costmap_2d_markers  costmap_2d_node
devel/lib/fake_localization/: fake_localization
devel/lib/global_planner/: planner
devel/lib/gmapping/: slam_gmapping  slam_gmapping_replay
devel/lib/map_server/: map_saver  map_server  rtest
puppy_description/: CMakeLists.txt  package.xml
puppy_description/config/: gazebo_control.yaml  joint_names_puppy_description.yaml
puppy_description/launch/: camera_view.launch  custom_world.launch  gazebo.launch  gazebo_with_urdf.launch  mlaunch.launch  rviz_with_urdf.launch
puppy_description/models/Workshop/: model.sdf
puppy_description/models/Workshop/materials/scripts/: rubberFloor.material
puppy_description/models/Zed_dummy/: model.sdf
puppy_description/models/construction_cone_small/: model.sdf
puppy_description/rviz/: custom_world.rviz  mapping.rviz
puppy_description/scripts/: walking.py
puppy_description/urdf/: puppy.urdf.xacro
puppy_description/worlds/: workshop_example.world
src/puppy_description/: CMakeLists.txt  package.xml  robot_controller_gazebo.py  test.py  test.rviz  tf_publish.py  urdf.rviz
(+128 files in other folders)
